Bug #12151
closedlibc: specifies less restrictive attribute than its target
100%
Description
Build errors with gcc 9:
cc1: error: '_siglongjmp' specifies less restrictive attribute than its target 'siglongjmp': 'noreturn' [-Werror=missing-attributes] ../i386/gen/siglongjmp.c:40:1: note: '_siglongjmp' target declared here 40 | siglongjmp(sigjmp_buf env, int val) | ^~~~~~~~~~ cc1: error: '_thr_exit' specifies less restrictive attribute than its target 'thr_exit': 'noreturn' [-Werror=missing-attributes] ../port/threads/thr.c:988:1: note: '_thr_exit' target declared here 988 | thr_exit(void *status) | ^~~~~~~~ cc1: all warnings being treated as errors
The weak symbols are not attributed accordingly and compiler is warning us about the fact.
Testing done: build/install/boot.
with wsdiff:
libc/i386_hwcap3/pics/siglongjmp.o
NOTE: ELF .debug_str difference detected.
libc/amd64/pics/siglongjmp.o
NOTE: ELF .rela.debug_line difference detected.
libc/i386_hwcap2/pics/siglongjmp.o
NOTE: ELF .debug_str difference detected.
libc/i386/pics/siglongjmp.o
NOTE: ELF .debug_str difference detected.
libc/i386_hwcap1/pics/siglongjmp.o
NOTE: ELF .debug_str difference detected.
unfortunately the build in different branches seems to cause debug section differences in many (all?) files, but still we only do see notes about .debug_str differences.
Related issues
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit dd2ed563fd8f7f157d5cd583cae81fef585c2ffc
commit dd2ed563fd8f7f157d5cd583cae81fef585c2ffc Author: Toomas Soome <tsoome@me.com> Date: 2020-01-14T16:49:00.000Z 12151 libc: specifies less restrictive attribute than its target Reviewed by: Matthias Scheler <mscheler@tintri.com> Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>
Updated by Toomas Soome about 1 year ago
- Related to Bug #13682: libc: '_getcontext' specifies less restrictive attribute than its target added