12151 libc: specifies less restrictive attribute than its target Reviewed by: Matthias Scheler <mscheler@tintri.com> Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>